# aduana

./: .gitignore  README.md  build.sh  vercel.json
.github/: README.md
.vercel/: project.json
benchmarking/: README.md  aduana_benchmarks.md  implementation_process.md
docs/: package-lock.json  package.json
docs/pages/: dao-governance.md  equity-pools.md  overview.md  zk-origin-proofs.md
frontend/: VERCEL_DEPLOYMENT.md  next.config.ts  package-lock.json  package.json  vercel.json  whitepaper.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/docs/: layout.tsx  page.tsx
frontend/src/app/docs/api/: page.tsx
frontend/src/app/docs/api-documentation/: page.tsx
frontend/src/app/docs/api-reference/: page.tsx
frontend/src/app/docs/dao-governance/: page.tsx
frontend/src/app/docs/developers-guide/: page.tsx
frontend/src/app/docs/equity-pools/: page.tsx
frontend/src/app/docs/getting-started/: page.tsx
frontend/src/app/docs/integration-tests/: page.tsx
frontend/src/app/docs/interoperability/: page.tsx
frontend/src/app/docs/overview/: page.tsx
frontend/src/app/docs/regulators-guide/: page.tsx
frontend/src/app/docs/smart-contracts/: page.tsx
frontend/src/app/docs/token-economics/: page.tsx
frontend/src/app/docs/traders-guide/: page.tsx
frontend/src/app/docs/zk-origin-proofs/: page.tsx
frontend/src/components/landing/: cta.tsx  dao-insurance.tsx  footer.tsx  hero.tsx  navbar.tsx  overview.tsx  synthetic-derivatives.tsx  token-utility.tsx  zk-origin.tsx
frontend/src/components/three/: WaveAnimation.tsx
frontend/src/components/ui/: code-block.tsx
frontend/src/types/: drei.d.ts
pallets/: README.md
pallets/duana-token/: Cargo.toml
pallets/duana-token/src/: lib.rs
pallets/insurance-pool/: Cargo.toml
pallets/insurance-pool/src/: lib.rs
pallets/origin-verifier/: Cargo.toml  INTEGRATION_TESTS.md  README.md  integration_tests_pseudocode.rs  integration_tests_summary.md
pallets/origin-verifier/src/: integration_tests.md  integration_tests.rs  lib.rs  mock.rs  runtime_integration.rs  tests.rs
pallets/synthetic-market/: Cargo.toml
pallets/synthetic-market/src/: lib.rs
pallets/tariff-logic/: Cargo.toml  README.md
pallets/tariff-logic/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml  README.md
runtime/integration/: README.md  mod.rs  pop.rs  xcm.rs
runtime/pallets/duana_token/: Cargo.toml
runtime/pallets/duana_token/src/: lib.rs
runtime/pallets/insurance_pool/: Cargo.toml
runtime/pallets/insurance_pool/src/: lib.rs
runtime/pallets/origin_verifier/: Cargo.toml
runtime/pallets/origin_verifier/src/: lib.rs
runtime/pallets/synthetic_market/: Cargo.toml
runtime/pallets/synthetic_market/src/: lib.rs
runtime/pallets/tariff_logic/: Cargo.toml
runtime/pallets/tariff_logic/src/: lib.rs
runtime/src/: integration.rs  lib.rs
